core/section/css/section.less
/**
* section
*
* Included from main.less file
*/

.section {
	display: table;
	width: 100%;
	padding: 1rem;

	// shared
	>.search_container {
		contain: content;
		width: 100%;
		position: relative;

		>.spinner {
			position: relative;
			margin: 20px;
		}
	}

	&.edit {
		width: calc(100vw - var(--inspector_width) - 0.25rem);
		margin-bottom: 10rem;

		&.no_inspector {
			width: 100%;
		}

		// inside modal box body
		.body & {
			width: 100%;
			margin-bottom: 0px;
		}

		@media screen and (max-width: @width_break_point_0) {
			width: 100%;
		}

		&.full_width {
			width: 100%;
			>.inspector_container {
				display: none;
			}
		}

		>.inspector_container {
			overflow: auto;
			height: 100%;
			width: var(--inspector_width);
			position: fixed;
			left: calc(100vw - var(--inspector_width) - 0.75rem);
			z-index: 2;
			// prevent content from shifting left when the vertical scrollbar appears
			overflow-y: overlay;
			padding-right: 13px;
			padding-left: 1px;
			// adjust top position when notification is present
			// transition: top 0.25s linear;

			@media screen and (max-width: @width_break_point_0) {
				display: inline;
				width: 100%;
				left: 0px;
				position: initial;

				>.wrapper_inspector {
					>.label {
						background-color: @color_grey_13
					}
				}
			}
		}//end .inspector_container

		>.search_container {

		}

		>.content_data {
			display: flex;
			flex-wrap: wrap;
			width: 100%;

			>*:not(.full_width) {
				flex: 1;
			}
		}
	}//end &.edit

	&.list {
		// section buttons container (export, new, print, etc.)
		>.buttons_container {
			display: flex;
			justify-content: space-between;

			button {
				margin-bottom: 0.25rem;
				white-space: nowrap;
			}

			>.search_buttons_container {
				display: flex;
			}

			// other_buttons_block
			>.other_buttons_block {
				display: flex;
				flex-wrap: wrap;
				justify-content: flex-end;
				width: 100%;
				padding: 0px;
			}

			// button show_other_buttons_button
			>.show_other_buttons_button {
				height: 2.2rem;
				transform: rotate(90deg);
				width: 1rem;
				padding: 12px;

				&:before {
					// content: 'Toggle buttons';
					content: attr(data-label);
					display: block;
					transform: rotate(-90deg);
					margin-top: 9rem;
					white-space: nowrap;
					padding-right: 1.1rem;
				}

				&.up {
					&:before {
						display: none;
					}
				}
				&:focus {
					outline: none;
				}
			}
		}

		>.search_container {

		}

		>.paginator_container {
			height: 39px;

			@media screen and (max-width: @width_break_point_0) {
				height: auto;
				min-height: 39px;
			}
		}

		>.list_body >.content_data {
			width: 100%;

			@media screen and (max-width: @width_break_point_1) {
				padding: 0;;
			}

			.column {
				&.column_drag {
					justify-content: center;
					align-items: center;
					align-content: center;
					.button.move{
						height: 1.5rem;
						width: 1.5rem;
					}
				}
			}
		}

	}//end &.list

}//end .section

.open_relations_modal{
	font-size: 1.1em;

	.label{
		line-height: 1.2em;
	}

	.target_sections_content{
		display: grid;
		grid-template-columns: repeat(2, 1fr);
		padding-top: 2rem;
		grid-row-gap: 0.5rem;
	}

	.radio_button_content{
		text-align: center;
		padding: 2rem;

		.found_records_label{
			padding-left: 2rem;
		}
	}
	.button_open_container{
		text-align: center;
		.success{
			font-size: 1.2em;
		}
	}
}

@import (once) './view_graph_section';
@import (once) './view_base_section';

